# phenopackets-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  manual_build.rs
.github/workflows/: ci.yml
data/v2/: cohort.json  cohort.pb  family.json  family.pb
org/phenopackets/schema/v2/core/: interpretation.proto
org/phenopackets/vrs/v1/: vrs.proto
org/phenopackets/vrsatile/v1/: vrsatile.proto
src/: lib.rs
src/serde/: helpers.rs  mod.rs  org_phenopackets_schema_v2.rs  org_phenopackets_schema_v2_core.rs  tests.rs  visitors.rs
src/tests/: api.rs  examples.rs  mod.rs  protobuf.rs  serde.rs
tests/: basic.rs  io.rs  serde.rs
