[package]
name = "phenopackets-dev"
version = "0.2.3-dev0"
authors = ["Daniel Danis", "Daniel Danis <daniel.gordon.danis@protonmail.com>"]
edition = "2021"
description = "Rust bindings for Phenopacket Schema"
readme = "README.md"
homepage = "https://github.com/ielis/phenopackets-dev"
repository = "https://github.com/ielis/phenopackets-dev"
license-file = "LICENSE"
keywords = ["phenopackets", "phenotype", "ontology", "bioinformatics"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
prost-build = "0.13"
