[package]
name = "phenopackets"
version = "0.2.2"
authors = ["Daniel Danis", "Daniel Danis <daniel.gordon.danis@protonmail.com>"]
edition = "2021"
description = "Rust bindings for Phenopacket Schema"
readme = "README.md"
homepage = "https://github.com/P2GX/phenopackets-rust"
repository = "https://github.com/P2GX/phenopackets-rust"
license-file = "LICENSE"
keywords = ["phenopackets", "phenotype", "ontology", "bioinformatics"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
prost-build = "0.13"
