[package]
name = "phenopackets"
version = "0.2.2-post2"
authors = ["Daniel Danis", "Daniel Danis <daniel.gordon.danis@protonmail.com>"]
edition = "2021"
description = "Rust bindings for Phenopacket Schema"
readme = "README.md"
homepage = "https://github.com/P2GX/phenopackets-rust"
repository = "https://github.com/P2GX/phenopackets-rust"
license-file = "LICENSE"
keywords = ["phenopackets", "phenotype", "ontology", "bioinformatics"]

[badges]
maintenance = { status = "experimental" }

[features]
serde = ["serde/derive"]

[dependencies]
prost = "0.14"
prost-types = "0.14"
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"

[build-dependencies]
prost-build = "0.14"
